--- a/css/style.css
+++ b/css/style.css
@@ -46,5 +46,11 @@ p {
 
 #stay {
     background-color: #f52b02;
-    font-size: 14px
+    font-size: 12px;
+    color: rgb(255, 255, 255)
+}
+
+#deal {
+    background-color: #02d9f5;
+    font-size: 12px;
 }
