--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 body {
-    background: linear-gradient(90deg, #f52b02, #fffd3b);
+    
+    background-image: url(../table.png), linear-gradient(90deg, #f52b02, #fffd3b);
+    /* background: linear-gradient(90deg, #f52b02, #fffd3b); */
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 h1 {
@@ -8,12 +12,10 @@ h1 {
 }
 
 .table {
-    background-image: url(../table.png);
-    background-position: center;
+
     display: block;
     text-align: center;
     height: 600px;
-    background-repeat: no-repeat;
 }
 
 .card {
@@ -32,6 +34,7 @@ input {
         border-radius: 50%;
         height: 40px;
         width: 40px;
+        margin-top: 15px;
 }
 
 p {
@@ -58,18 +61,33 @@ p {
 }
 
 div {
-    height: 20px
+    margin-top: 100px
 }
 
 #dealAmount, #cardAmount {
+    margin: -5px auto;
     font-size: 30px
 }
 
 #cont {
     background-color: #02e5f5;
     border-color: #02e5f5;
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
+    height: 45px;
+    width: 45px;
     text-decoration: bold;
 }
+
+/* #one, #five, #ten {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 180px;
+} */
+
+/* #hit, #stay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 180px;
+    margin-top: 10px
+} */
